@@ -1,3 +1,11 @@
+Next release
+
+  - Speed up ``traversal.model_url`` execution by using a custom url
+    quoting function instead of Python's ``urllib.quote``, by caching
+    URL path segment quoting and encoding results, and by disusing
+    Python's ``urlparse.urljoin`` in favor of a simple string
+    concatenation.
+
 0.5.5 (12/17/2008)
 
   Backwards Incompatibilities
